# StatusShareTool

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
apps/linux-gtk/: Cargo.toml
apps/linux-gtk/resources/: com.grtsinry43.statussharetool.desktop
apps/linux-gtk/src/: app.rs  detection.rs  main.rs  monitor.rs  rules_editor.rs
apps/macos-swiftui/: project.yml
apps/macos-swiftui/StatusShareMac/: AppIcon.icns  ContentView.swift  StatusShareMacApp.swift  StatusShareViewModel.swift
apps/macos-swiftui/StatusShareMac.xcodeproj/: project.pbxproj
apps/macos-swiftui/StatusShareMac/Services/: MediaDetectionService.swift  MonitorService.swift  WindowDetectionService.swift
apps/macos-swiftui/StatusShareMac/ViewModels/: AppViewModel.swift
apps/macos-swiftui/StatusShareMac/Views/: CompactCardView.swift  ConfigView.swift  DebugView.swift  HomeView.swift  LogView.swift  MenuBarPopover.swift  RulesView.swift  Sidebar.swift
apps/windows-wpf/StatusShare.Wpf/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  StatusShare.Wpf.csproj
apps/windows-wpf/StatusShare.Wpf/Converters/: StringToImageSourceConverter.cs
apps/windows-wpf/StatusShare.Wpf/Interop/: BridgeModels.cs  (+1 more)
crates/statusshare-core/: Cargo.toml
crates/statusshare-core/src/: lib.rs  scheduler.rs
crates/windows-pinvoke/: Cargo.toml
crates/windows-pinvoke/include/: statusshare_c_api.h
crates/windows-pinvoke/src/: lib.rs
docs/: api-contract.md  architecture.md
installer/: statussharetool.iss
scripts/: build-c-api.sh  generate-swift-bindings.sh
(+4 files in other folders)
