[workspace]
members = [
    "crates/statusshare-core",
    "crates/windows-pinvoke",
    "apps/linux-gtk",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uniffi = { version = "0.29", features = ["cli"] }

