[package]
name = "statusshare-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi_bindgen.rs"

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
uniffi.workspace = true
