[package]
name = "windows-pinvoke"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
statusshare-core = { path = "../statusshare-core" }
windows = { version = "0.61.3", features = [
  "Media_Control",
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }
windows-future = "0.2.1"
